🤖Добавлены объекты//🛠️Изменено события симулятора, добавлен обработчик ошибок👾

--- a/WallE_Visual/WallE_Visual.csproj
+++ b/WallE_Visual/WallE_Visual.csproj
@@ -392,6 +392,12 @@
   <ItemGroup>
     <None Include="bin\Debug\resource\img\Instructions\advance.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Robot_Yellow.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Robot_Green.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
