--- a/WallE/WallE.csproj
+++ b/WallE/WallE.csproj
@@ -162,9 +162,9 @@
     <Compile Include="MATLAN\Instructions\Language Instructions\T\TW.cs" />
     <Compile Include="MATLAN\Instructions\Language Instructions\AutoGuideFlux\VerticalFlux.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Routine\EditorRoutine.cs" />
-    <Compile Include="Routine\RoutineList.cs" />
-    <Compile Include="Routine\Rut.cs" />
+    <Compile Include="Procedure\EditorProc.cs" />
+    <Compile Include="Procedure\ProcList.cs" />
+    <Compile Include="Procedure\Proc.cs" />
     <Compile Include="Simulator\Round.cs" />
     <Compile Include="Simulator\Simulator.cs" />
     <Compile Include="Simulator\SimulatorEnumerator.cs" />
@@ -205,7 +205,7 @@
   <ItemGroup>
     <None Include="MATLAN\Instructions.cd" />
     <None Include="MATLAN\Instructions\Instructions.cd" />
-    <None Include="Routine\Routine.cd" />
+    <None Include="Procedure\Proc.cd" />
     <None Include="Simulator\Simulator.cd" />
     <None Include="Tools\Tools.cd" />
     <None Include="World\World.cd" />
