--- a/WallE/WallE.csproj
+++ b/WallE/WallE.csproj
@@ -143,7 +143,7 @@
     <Compile Include="InstrLan\Instructions\Programmable Instructions\Right.cs" />
     <Compile Include="InstrLan\Instructions\Programmable Instructions\Backward.cs" />
     <Compile Include="InstrLan\Instructions\Programmable Instructions\Forward.cs" />
-    <Compile Include="InstrLan\Instructions\Programmable Instructions\Webcam.cs" />
+    <Compile Include="InstrLan\Instructions\Programmable Instructions\ColorSensor.cs" />
     <Compile Include="InstrLan\Instructions\Language Instructions\Execution Procedure\Start.cs" />
     <Compile Include="InstrLan\Instructions\Language Instructions\Execution Procedure\Return.cs" />
     <Compile Include="InstrLan\Instructions\Language Instructions\Stack\Zero.cs" />
